--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,15 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
         <activity android:name=".Reminder" />
         <activity android:name=".Profile" />
         <activity android:name=".Appointments" />
@@ -21,16 +29,16 @@
             android:label="@string/title_activity_dos"
             android:theme="@style/AppTheme" />
         <activity android:name=".creatAccount">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Login" />
         <activity android:name=".emergency" />
         <activity android:name=".addAppointment" />
-        <activity android:name=".addReminder"></activity>
+        <activity android:name=".addReminder" />
+        <activity
+            android:name=".weekbywek"
+            android:label="@string/title_activity_weekbywek"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
